forth/test/fail/test_call_missing_dot_control.af
\ Must fail to compile.
fun: .test_call_missing_dot_control { -- err }
  try
end
